examples/test/testpolicy13169.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13169
  namespace: namespace267
spec:
  podSelector:
    matchLabels:
      key9: value19
      key10: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value18
          key36: value27
      podSelector:
        matchLabels:
          key20: value30
          key5: value46
